product-preview-card-component-main/style.css
/* google fonts */
@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

:root {
	/* color */
	--Green-500: hsl(158, 36%, 37%);
	--Green-700: hsl(158, 42%, 18%);

	--Cream: hsl(30, 38%, 92%);

	--Black: hsl(212, 21%, 14%);
	--Grey: hsl(228, 12%, 48%);
	--White: hsl(0, 0%, 100%);

	--clr-primary-400: var(--Green-500);
	--clr-primary-600: var(--Green-700);
	--clr-secondary-200: var(--Cream);

	--clr-neutral-900: var(--Black);
	--clr-neutral-400: var(--Grey);
	--clr-neutral-100: var(--White);

	/* typography */
	--fw-regular: 500;
	--fw-bold: 700;

	--ff-base: 'Montserrat', sans-serif;
	--ff-accent: 'Fraunces', serif;
}

/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
	box-sizing: border-box;`
}

/* 2. Remove default margin */
*:not(dialog) {
	margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
	html {
		interpolate-size: allow-keywords;
	}
}

body {
	/* 4. Increase line-height */
	line-height: 1.7;
	/* 5. Improve text rendering */
	-webkit-font-smoothing: antialiased;
}

html, body {
	height: 100%;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
	display: block;
	max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
	font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
	overflow-wrap: break-word;
}

h1, h2, h3 {
	line-height: 1;
}

/* 9. Improve line wrapping */
p {
	text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	text-wrap: balance;
}

/* general styling */
body {
	font-family: var(--ff-base);
	font-weight: var(--fw-regular);
	font-size: .875rem;
	color: var(--clr-neutral-400);
	background-color: var(--clr-secondary-200);

	/* for this project only */
	display: grid;
	grid-template-rows: 1fr auto;
	margin: 1rem;
}

.main-content {
	display: grid;
	place-content: center;
}

.attribution {
	text-align: center;
}

/* utilities */
.flex-group {
 display: flex;
 gap: 1rem;
 flex-wrap: wrap;
 align-items: center;
}

.sr-only,
.visually-hidden {
  border: 0 !important;
  clip: rect(0, 0, 0, 0) !important;
  clip-path: inset(50%) !important;
  height: 1px !important;
  margin: -1px !important;
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  white-space: nowrap !important;
  width: 1px !important;
}

/* button */
.button {
	cursor: pointer;
	text-decoration: none;
	display: inline-flex;
	justify-content: center;
	align-items: center;
	gap: .75rem;

	border: none;
	border-radius: .5rem;
	padding: .75em 1.5em;
	background-color: var(--clr-primary-400);
	color: var(--clr-neutral-100);
	font-weight: var(--fw-bold);
	font-size: .925rem;
}

.button[data-icon="shopping-cart"]::before {
content: "";
width: 15px;
height: 16px;
background-image: url(./images/icon-cart.svg);
}

.button:is(:hover, :focus) {
	background-color: var(--clr-primary-600);
}

/* product styles */
.product {
	--content-padding: 1.5rem;
	--content-spacing: 1rem;

	display: grid;
	background-color: var(--clr-neutral-100);
	border-radius: 0.5rem ;
	overflow: hidden;
	max-width: 600px;
}

@media (min-width: 600px) {
	.product {
		--content-padding: 2rem;
		grid-template-columns: repeat(2, 1fr);
	}
}



.product__content {
	padding: var(--content-padding);
	display: grid;
	gap: var(--content-spacing);
}

.product__category {
	font-size: .8125rem;
	text-transform: uppercase;
	letter-spacing: 6px;
}

.product__title {
	font-size: 2rem;
	font-family: var(--ff-accent);
	color: var(--clr-neutral-900);
}

.product__price {
	font-size: 2rem;
	font-family: var(--ff-accent);
	font-weight: var(--fw-bold);
	color: var(--clr-primary-400);
}

